--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.0.6"
 django-widget-tweaks = "^1.5.0"
 pyyaml = "^6.0.1"
 gunicorn = "^22.0.0"
+psycopg2-binary = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
